--- a/styles/common.scss
+++ b/styles/common.scss
@@ -1,7 +1,13 @@
 body {
     margin: unset;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background: #eff0f9;
+    background:rgba(245, 245, 245, 0.8);
+    h1,h2,h3,h4,h5{
+        color: rgba(154, 182, 202, 1);
+    }
+    p{
+        color: #333;
+    }
 }
 
 * {
@@ -14,7 +20,7 @@ a {
 }
 
 .container {
-    max-width: 800px;
+    max-width: 60%;
     margin: 0 auto;
     padding: 0 1em;
 }
