--- a/components/NavBar/NavBar.scss
+++ b/components/NavBar/NavBar.scss
@@ -1,33 +1,19 @@
-.NavBar {
-    padding: 1em 0;
-    background-color: rgba(154, 182, 202, 1);
-    color: rgba(245, 245, 245, 0.8);
-    .container {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    a {
-        color: inherit;
-        text-decoration: unset;
-
-        &:hover {
-            text-decoration: unset;
+.navbar-brand {
+    a{
+        text-decoration: none;
+        color: #333;
+        &:hover{
+            color:red
         }
     }
+}
 
-    ul {
-        margin: unset;
-        padding: unset;
-        list-style: none;
-        li {
-            display: inline-block;
-            margin-left: 1em;
+.nav-link{
+    a{
+        text-decoration: none;
+        color: #333;
+        &:hover{
+            color:red;
         }
-    }
-
-    .title {
-        font-size: 1.5em;
     }
 }
