--- a/components/NavBar/NavBar.scss
+++ b/components/NavBar/NavBar.scss
@@ -3,7 +3,8 @@
         text-decoration: none;
         color: #333;
         &:hover{
-            color:red
+            color: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+            background-clip: text;
         }
     }
 }
