--- a/styles/index.scss
+++ b/styles/index.scss
@@ -5,4 +5,5 @@
 // COMPONENTS
 @import "../components/NavBar/NavBar.scss";
 // @import "../components/PostPreview/PostPreview.scss";
-@import "../components/HomeHeader/HomeHeader.scss"
+@import "../components/HomeHeader/HomeHeader.scss";
+@import "../components/HomeLatestPosts/featuredPosts.scss";
