--- a/components/HomeHeader/HomeHeader.scss
+++ b/components/HomeHeader/HomeHeader.scss
@@ -57,11 +57,15 @@
     0% {
         top: 0px;
     }
-    33% {
+    25% {
         top: -50px;
     }
-    66% {
+    50% {
         top: -100px;
+    }
+
+    75% {
+        top: -150px;
     }
 
     99% {
