--- a/components/HomeHeader/HomeHeader.scss
+++ b/components/HomeHeader/HomeHeader.scss
@@ -1,6 +1,7 @@
 .homeHeader {
     background: rgb(2, 0, 36);
     background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 35%, rgba(0, 212, 255, 1) 100%);
+    padding: 4em 1em;
 
     h1 {
         color: white;
@@ -10,8 +11,25 @@
     p {
         color: rgba(239, 239, 239, 0.8) !important;
     }
+
+.center-utility {
+    display: flex;
+    justify-content: center;
+}
+
+.profile-frame {
+    border: 0.5em solid white;
+    border-radius: 50%;
+    width: 250px;
+    height: 250px;
+    padding: 0;
+    img {
+        border-radius: 50%;
+    }
+}
+
     .Iam {
-        padding: 6em 5em;
+        // padding: 1em 5em;
 
         b {
             float: left;
