--- a/components/HomeHeader/HomeHeader.scss
+++ b/components/HomeHeader/HomeHeader.scss
@@ -1,15 +1,16 @@
 .homeHeader {
-    background: rgb(2, 0, 36);
-    background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 35%, rgba(0, 212, 255, 1) 100%);
+    // background: rgb(2, 0, 36);
+    // background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 35%, rgba(0, 212, 255, 1) 100%);
     padding: 4em 1em;
 
     h1 {
-        color: white;
+        // color: white;
         margin-bottom: unset;
     }
 
     p {
-        color: rgba(239, 239, 239, 0.8) !important;
+        // color: rgba(239, 239, 239, 0.8) !important;
+        color: black !important;
     }
 
 .center-utility {
