--- a/components/NavBar/NavBar.scss
+++ b/components/NavBar/NavBar.scss
@@ -1,7 +1,7 @@
 .navbar-brand {
     a{
         text-decoration: none;
-        color: #333;
+        color: white;
         &:hover{
             color: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
             background-clip: text;
@@ -9,10 +9,14 @@
     }
 }
 
+.navbar {
+    background: rgb(2, 0, 36) !important;
+}
+
 .nav-link{
     a{
         text-decoration: none;
-        color: #333;
+        color: white;
         &:hover{
             color:red;
         }
