--- a/styles/common.scss
+++ b/styles/common.scss
@@ -1,27 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dongle:wght@400;700&family=Roboto+Mono:wght@400;500;700&display=swap');
+
+* {
+    font-family: 'Roboto Mono', monospace;
+    box-sizing: border-box;
+}
 
 p{
     font-size: 16px;
     letter-spacing: 1px;
     line-height: 30px;
     font-family: 'Open Sans', sans-serif;
-    margin: 3rem 0;
-    width: 65%;
 }
 
-h1,h2,h3,h4{
-    margin: 3rem 0;
-}
-
-h1{
-    font-size: 30px;
-}
-h2{
-    font-size: 28px;
-}
-h3{
-    font-size: 26px;
-}
-h4{
-    font-size: 24px;
+.container {
+    width: 100vw;
+    border: 2px red solid;
 }
