--- a/styles/common.scss
+++ b/styles/common.scss
@@ -4,16 +4,38 @@
 * {
     font-family: 'Roboto Mono', monospace;
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+html {
+    font-size: 62.5%
 }
 
 p{
-    font-size: 16px;
-    letter-spacing: 1px;
-    line-height: 30px;
+    font-size: 1.6rem;
+    line-height: 2.4rem;
     font-family: 'Open Sans', sans-serif;
 }
 
+h1 {
+ font-size: 2.8rem;
+}
+
+h2 {
+    font-size: 2.6rem;
+}
+
+h3 {
+    font-size: 2.4rem;
+}
+
+h4 {
+ font-size: 2.2rem;
+}
+
 .container {
-    width: 50vw;
+    width: 65vw;
     border: 2px red solid;
+    margin: 0 auto;
 }
