--- a/components/NavBar/NavBar.scss
+++ b/components/NavBar/NavBar.scss
@@ -1,16 +1,32 @@
-.navbar-brand {
-    a{
-        text-decoration: none;
-        color: white;
-        &:hover{
-            color: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
-            background-clip: text;
+.navbar {
+    background:#234;
+    height: 6rem;
+    position: relative;
+
+    ul {
+        list-style: none;
+        display: flex;
+        flex-direction: row;
+        justify-content: right;
+        align-items: center;
+        height: 100%;
+    }
+
+
+    .navbar-link {
+        margin-right: 2rem;
+
+        a {
+            text-decoration: none;
+            color: #fff;
+            list-style: none;
+            font-size: 1.6rem;
         }
     }
-}
 
-.navbar {
-    background:#0A192E !important;
+    .navbar-link:hover {
+        color: red;
+    }
 }
 
 .nav-link{
