--- a/styles/common.scss
+++ b/styles/common.scss
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Dongle:wght@400;700&family=Roboto+Mono:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&family=Ubuntu:wght@400;500;700&display=swap');
 
 * {
     font-family: 'Roboto Mono', monospace;
@@ -15,23 +14,7 @@ html {
 p{
     font-size: 1.6rem;
     line-height: 2.4rem;
-    font-family: 'Open Sans', sans-serif;
-}
-
-h1 {
- font-size: 2.8rem;
-}
-
-h2 {
-    font-size: 2.6rem;
-}
-
-h3 {
-    font-size: 2.4rem;
-}
-
-h4 {
- font-size: 2.2rem;
+    font-family: 'Rubik', sans-serif;
 }
 
 .container {
