set font family for header

--- a/components/HomeHeader/HomeHeader.scss
+++ b/components/HomeHeader/HomeHeader.scss
@@ -5,6 +5,7 @@
     color: #fff;
     position: relative;
     backface-visibility: hidden;
+    font-family: "Ubuntu", sans-serif;
 
     .container {
         width: 85vw;
