--- a/components/HomeHeader/HomeHeader.scss
+++ b/components/HomeHeader/HomeHeader.scss
@@ -1,32 +1,31 @@
 .home-header {
     padding: 4em 1em;
-    height: 100vh;
+    height: 95vh;
     background-color: #0A192E;
     color: #fff;
     position: relative;
     backface-visibility: hidden;
-    font-family: "Ubuntu", sans-serif;
-
-    .container {
-        width: 85vw;
-    }
 
     .header-text {
         position: absolute;
         top: 50%;
         transform: translate(0, -50%);
+        letter-spacing: .2rem;
+
+        h1 {
+            margin-bottom: 5rem;
+        }
     }
 
     .header-text-greeting {
-        font-size: 2rem;
+        font-size: 3rem;
         display: block;
         animation: moveInRight 1s ease-out;
     }
 
     .header-text-name {
-        font-size: 8rem;
+        font-size: 6rem;
         display: block;
-        text-transform: uppercase;
         animation: moveInLeft 1s ease-out 1s;
         animation-fill-mode: backwards;
     }
@@ -34,13 +33,13 @@
     .header-text-name::before {
         content: '';
         background-color: #317eeb;
-        width: 200px;
+        width: 20rem;
         height: auto;
     }
 
     .header-text-title {
         // margin-top: -45px;
-        font-size: 2rem;
+        font-size: 4rem;
         display: block;
         animation: moveInRight 1s ease-out 2s;
         animation-fill-mode: backwards;
@@ -50,11 +49,21 @@
         width: 20%;
         animation: moveInBottom 1s ease-out 3s;
         animation-fill-mode: backwards;
+        margin-bottom: 4rem;
     }
 
     .btn-header {
         animation: moveInBottom 1s ease-out 3s;
         animation-fill-mode: backwards;
+        border-radius: 10rem;
+        border: none;
+
+        a{
+            display: block;
+            text-decoration: none;
+            padding: 1rem 2rem;
+            color: #317eeb;
+        }
     }
 
     .header-text-highlight {
@@ -65,7 +74,7 @@
 @keyframes moveInRight {
     0%{
         opacity: 0;
-        transform: translateX(100px);
+        transform: translateX(10rem);
     }
 
     100%{
@@ -77,7 +86,7 @@
 @keyframes moveInLeft {
     0% {
         opacity: 0;
-        transform: translateX(-100px);
+        transform: translateX(-10rem);
     }
 
     100% {
@@ -89,7 +98,7 @@
 @keyframes moveInBottom {
     0% {
         opacity: 0;
-        transform: translateY(100px);
+        transform: translateY(10rem);
     }
 
     100% {
