--- a/styles/common.scss
+++ b/styles/common.scss
@@ -1,23 +1,42 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&family=Ubuntu:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
 
 * {
-    font-family: 'Roboto Mono', monospace;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
 html {
-    font-size: 62.5%
+    font-size: 62.5%;
+    font-family:'Roboto', sans-serif;
 }
 
 p{
     font-size: 1.6rem;
     line-height: 2.4rem;
-    font-family: 'Rubik', sans-serif;
 }
 
 .container {
     width: 65vw;
     margin: 0 auto;
+}
+
+.custom-404-container {
+    background-color: #0A192E;
+    height: 95vh;
+    color: red;
+    text-align: center;
+    position: relative;
+
+    .fourohfour-text-box {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        padding: 3rem;
+
+        hr {
+            margin: 2rem 0;
+        }
+    }
 }
