--- a/components/NavBar/NavBar.scss
+++ b/components/NavBar/NavBar.scss
@@ -7,7 +7,7 @@
         height: 5rem;
         display: flex;
         flex-direction: row;
-        justify-content: end;
+        justify-content: flex-end;
         align-items: center;
     }
 
