--- a/components/HomeHeader/HomeHeader.scss
+++ b/components/HomeHeader/HomeHeader.scss
@@ -1,6 +1,7 @@
 .home-header {
     padding: 4em 1em;
     height: 95vh;
+    width: 100vw;
     background-color: #0A192E;
     color: #fff;
     position: relative;
