--- a/components/HomeHeader/HomeHeader.scss
+++ b/components/HomeHeader/HomeHeader.scss
@@ -1,5 +1,5 @@
 .home-header {
-    padding: 4em 1em;
+    padding: 4rem 1rem;
     height: 95vh;
     width: 100vw;
     background-color: #0A192E;
@@ -47,7 +47,7 @@
     }
 
     .header-text-desc {
-        width: 20%;
+        width: 40rem;
         animation: moveInBottom 1s ease-out 3s;
         animation-fill-mode: backwards;
         margin-bottom: 4rem;
@@ -68,7 +68,7 @@
     }
 
     .header-text-highlight {
-        color: #317eeb;
+        color: red;
     }
 }
 
