add color variables

--- a/styles/common.scss
+++ b/styles/common.scss
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
 
+
+$color-primary: #0A192E;
+$color-secondary: #5A1807;
+
+
 * {
     box-sizing: border-box;
     margin: 0;
