change font-size with media queries

--- a/styles/common.scss
+++ b/styles/common.scss
@@ -45,3 +45,21 @@ p{
         }
     }
 }
+
+@media screen and (max-width: 65rem) {
+    html {
+        font-size: 57.5%;
+    }
+}
+
+@media screen and (max-width: 45rem) {
+    html {
+        font-size: 52.5%;
+    }
+}
+
+@media screen and (max-width: 40rem) {
+    html {
+        font-size: 47.5%;
+    }
+}
