--- a/components/HomeHeader/HomeHeader.scss
+++ b/components/HomeHeader/HomeHeader.scss
@@ -1,6 +1,6 @@
 .home-header {
     padding: 4rem 1rem;
-    height: 95vh;
+    height: 100vh;
     width: 100vw;
     background-color: #0A192E;
     color: #fff;
@@ -22,6 +22,7 @@
         font-size: 1.6rem;
         display: block;
         animation: moveInRight 1s ease-out;
+        will-change: transform, opacity;
     }
 
     .header-text-name {
@@ -29,6 +30,7 @@
         display: block;
         animation: moveInLeft 1s ease-out 1s;
         animation-fill-mode: backwards;
+        will-change: transform, opacity;
     }
 
     .header-text-title {
@@ -37,6 +39,7 @@
         display: block;
         animation: moveInRight 1s ease-out 2s;
         animation-fill-mode: backwards;
+        will-change: transform, opacity;
     }
 
     .header-text-desc {
@@ -44,11 +47,13 @@
         animation: moveInBottom 1s ease-out 3s;
         animation-fill-mode: backwards;
         margin-bottom: 2rem;
+        will-change: transform, opacity;
     }
 
     .btn-header {
         animation: moveInBottom 1s ease-out 3s;
         animation-fill-mode: backwards;
+        will-change: transform, opacity;
         border-radius: 10rem;
         border: none;
 
