--- a/styles/common.scss
+++ b/styles/common.scss
@@ -16,6 +16,10 @@ html {
     font-family:'Roboto', sans-serif;
 }
 
+body {
+    background-color: $color-primary;
+}
+
 p{
     font-size: 1.6rem;
     line-height: 2.4rem;
