add new color var

--- a/styles/common.scss
+++ b/styles/common.scss
@@ -3,6 +3,7 @@
 
 $color-primary: #0A192E;
 $color-secondary: #5A1807;
+$color-text-primary: #eee;
 
 
 * {
@@ -18,6 +19,7 @@ html {
 
 body {
     background-color: $color-primary;
+    color: $color-text-primary;
 }
 
 p{
