comment out body styling

--- a/components/HomeHeader/particles.scss
+++ b/components/HomeHeader/particles.scss
@@ -26,12 +26,12 @@ html, body {
   height: 100%;
 }
 
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 4rem;
-}
+// body {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   font-size: 4rem;
+// }
 
 .page-bg, .animation-wrapper {
   position: fixed;
