--- a/components/HomeHeader/HomeHeader.scss
+++ b/components/HomeHeader/HomeHeader.scss
@@ -5,8 +5,8 @@
     background-color: #0A192E;
     color: #fff;
     position: relative;
-    // backface-visibility: hidden;
-    // overflow: hidden
+    backface-visibility: hidden;
+    overflow: hidden;
 
     .header-text {
         position: absolute;
