--- a/components/HomeHeader/particles.scss
+++ b/components/HomeHeader/particles.scss
@@ -22,9 +22,9 @@ $time-4: 200s;
 }
 
 /* Styles */
-html, body {
-  height: 100%;
-}
+// html, body {
+//   height: 100%;
+// }
 
 // body {
 //   display: flex;
@@ -33,21 +33,21 @@ html, body {
 //   font-size: 4rem;
 // }
 
-.page-bg, .animation-wrapper {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
+// .page-bg, .animation-wrapper {
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+// }
 
-.page-bg {
-  background: $color-bg;
-  background-blend-mode: screen;
-  background-size: cover;
-  filter: grayscale(100%);
-  z-index: -1;
-}
+// .page-bg {
+//   background: $color-bg;
+//   background-blend-mode: screen;
+//   background-size: cover;
+//   filter: grayscale(100%);
+//   z-index: -1;
+// }
 
 .particle, .particle:after {
   background: transparent;
@@ -114,98 +114,98 @@ html, body {
   }
 }
 
-.page-wrapper {
-  text-align: center;
-  color: #fff;
-  z-index: 2;
-}
+// .page-wrapper {
+//   text-align: center;
+//   color: #fff;
+//   z-index: 2;
+// }
 
-h4 {
-  color: #fff;
-  font-family: Monoton;
-  -webkit-animation: neon1 1.5s ease-in-out infinite alternate;
-  -moz-animation: neon1 1.5s ease-in-out infinite alternate;
-  animation: neon1 1.5s ease-in-out infinite alternate;
-}
+// h4 {
+//   color: #fff;
+//   font-family: Monoton;
+//   -webkit-animation: neon1 1.5s ease-in-out infinite alternate;
+//   -moz-animation: neon1 1.5s ease-in-out infinite alternate;
+//   animation: neon1 1.5s ease-in-out infinite alternate;
+// }
 
-h4:hover {
-  color: #FF1177;
-  -webkit-animation: none;
-  -moz-animation: none;
-  animation: none;
-}
+// h4:hover {
+//   color: #FF1177;
+//   -webkit-animation: none;
+//   -moz-animation: none;
+//   animation: none;
+// }
 
 /*glow for webkit*/
 
-@-webkit-keyframes neon1 {
-  from {
-    text-shadow: 0 0 10px #fff,
-      0 0 20px #fff,
-      0 0 30px #fff,
-      0 0 40px #FF1177,
-      0 0 70px #FF1177,
-      0 0 80px #FF1177,
-      0 0 100px #FF1177,
-      0 0 150px #FF1177;
-  }
-  to {
-    text-shadow: 0 0 5px #fff,
-      0 0 10px #fff,
-      0 0 15px #fff,
-      0 0 20px #FF1177,
-      0 0 35px #FF1177,
-      0 0 40px #FF1177,
-      0 0 50px #FF1177,
-      0 0 75px #FF1177;
-  }
-}
+// @-webkit-keyframes neon1 {
+//   from {
+//     text-shadow: 0 0 10px #fff,
+//       0 0 20px #fff,
+//       0 0 30px #fff,
+//       0 0 40px #FF1177,
+//       0 0 70px #FF1177,
+//       0 0 80px #FF1177,
+//       0 0 100px #FF1177,
+//       0 0 150px #FF1177;
+//   }
+//   to {
+//     text-shadow: 0 0 5px #fff,
+//       0 0 10px #fff,
+//       0 0 15px #fff,
+//       0 0 20px #FF1177,
+//       0 0 35px #FF1177,
+//       0 0 40px #FF1177,
+//       0 0 50px #FF1177,
+//       0 0 75px #FF1177;
+//   }
+// }
 
-/*glow for mozilla*/
+// /*glow for mozilla*/
 
-@-moz-keyframes neon1 {
-  from {
-    text-shadow: 0 0 10px #fff,
-      0 0 20px #fff,
-      0 0 30px #fff,
-      0 0 40px #FF1177,
-      0 0 70px #FF1177,
-      0 0 80px #FF1177,
-      0 0 100px #FF1177,
-      0 0 150px #FF1177;
-  }
-  to {
-    text-shadow: 0 0 5px #fff,
-      0 0 10px #fff,
-      0 0 15px #fff,
-      0 0 20px #FF1177,
-      0 0 35px #FF1177,
-      0 0 40px #FF1177,
-      0 0 50px #FF1177,
-      0 0 75px #FF1177;
-  }
-}
+// @-moz-keyframes neon1 {
+//   from {
+//     text-shadow: 0 0 10px #fff,
+//       0 0 20px #fff,
+//       0 0 30px #fff,
+//       0 0 40px #FF1177,
+//       0 0 70px #FF1177,
+//       0 0 80px #FF1177,
+//       0 0 100px #FF1177,
+//       0 0 150px #FF1177;
+//   }
+//   to {
+//     text-shadow: 0 0 5px #fff,
+//       0 0 10px #fff,
+//       0 0 15px #fff,
+//       0 0 20px #FF1177,
+//       0 0 35px #FF1177,
+//       0 0 40px #FF1177,
+//       0 0 50px #FF1177,
+//       0 0 75px #FF1177;
+//   }
+// }
 
-/*glow*/
+// /*glow*/
 
-@keyframes neon1 {
-  from {
-    text-shadow: 0 0 10px #fff,
-      0 0 20px #fff,
-      0 0 30px #fff,
-      0 0 40px #FF1177,
-      0 0 70px #FF1177,
-      0 0 80px #FF1177,
-      0 0 100px #FF1177,
-      0 0 150px #FF1177;
-  }
-  to {
-    text-shadow: 0 0 5px #fff,
-      0 0 10px #fff,
-      0 0 15px #fff,
-      0 0 20px #FF1177,
-      0 0 35px #FF1177,
-      0 0 40px #FF1177,
-      0 0 50px #FF1177,
-      0 0 75px #FF1177;
-  }
-}
+// @keyframes neon1 {
+//   from {
+//     text-shadow: 0 0 10px #fff,
+//       0 0 20px #fff,
+//       0 0 30px #fff,
+//       0 0 40px #FF1177,
+//       0 0 70px #FF1177,
+//       0 0 80px #FF1177,
+//       0 0 100px #FF1177,
+//       0 0 150px #FF1177;
+//   }
+//   to {
+//     text-shadow: 0 0 5px #fff,
+//       0 0 10px #fff,
+//       0 0 15px #fff,
+//       0 0 20px #FF1177,
+//       0 0 35px #FF1177,
+//       0 0 40px #FF1177,
+//       0 0 50px #FF1177,
+//       0 0 75px #FF1177;
+//   }
+// }
