--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,9 +1,19 @@
-@import "./common.scss";
-@import "../components/HomeHeader/particles.scss";
+// ABSTRACTS
 
+// BASE
 
 // COMPONENTS
+@import "../components/HomeHeader/particles.scss";
 @import "../components/NavBar/NavBar.scss";
 // @import "../components/PostPreview/PostPreview.scss";
 @import "../components/HomeHeader/HomeHeader.scss";
 @import "../components/HomeLatestPosts/featuredPosts.scss";
+
+// LAYOUT
+
+// PAGES
+
+//VENDORS
+
+@import "./common.scss";
+
