--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
+
 // ABSTRACTS
+@import "./abstracts/variables.scss";
 
 // BASE
-@import "../sass/base/reset.scss";
+@import "./base/reset.scss";
+@import "./base/typography.scss";
 
 // COMPONENTS
 @import "../components/HomeHeader/particles.scss";
