move navbar styling file

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,7 +9,7 @@
 
 // COMPONENTS
 @import "./components/particles.scss";
-@import "../components/NavBar/NavBar.scss";
+@import "./components/NavBar.scss";
 // @import "../components/PostPreview/PostPreview.scss";
 @import "./components/header.scss";
 @import "../components/HomeLatestPosts/featuredPosts.scss";
