rename latest posts to featured posts. move styling file

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,7 +12,7 @@
 @import "./components/NavBar.scss";
 // @import "../components/PostPreview/PostPreview.scss";
 @import "./components/header.scss";
-@import "../components/HomeLatestPosts/featuredPosts.scss";
+@import "./components/featuredPosts.scss";
 
 // LAYOUT
 @import "./layout/grid.scss";
