move post preview

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,7 +10,7 @@
 // COMPONENTS
 @import "./components/particles.scss";
 @import "./components/NavBar.scss";
-// @import "../components/PostPreview/PostPreview.scss";
+@import "./components/PostPreview.scss";
 @import "./components/header.scss";
 @import "./components/featuredPosts.scss";
 
