--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,11 +11,12 @@
 @import "./components/particles.scss";
 @import "./components/NavBar.scss";
 @import "./components/PostPreview.scss";
-@import "./components/header.scss";
 @import "./components/featuredPosts.scss";
 
 // LAYOUT
 @import "./layout/grid.scss";
+@import "./layout/header.scss";
+@import "./layout/footer.scss";
 
 // PAGES
 
