--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,7 @@
 
 // ABSTRACTS
 @import "./abstracts/variables.scss";
+@import "./abstracts/utilities.scss";
 
 // BASE
 @import "./base/reset.scss";
