--- a/sass/pages/body.scss
+++ b/sass/pages/body.scss
@@ -1,5 +1,5 @@
 body {
-    background-color: $color-primary;
+    background-color: $color-primary-dark;
     color: $color-text-primary;
     overflow-x: hidden;
 }
