--- a/sass/layout/header.scss
+++ b/sass/layout/header.scss
@@ -2,8 +2,7 @@
     padding: 4rem 1rem;
     height: 100vh;
     width: 100vw;
-    background-color: #0A192E;
-    color: #fff;
+    color: $color-text-primary;
     position: relative;
     backface-visibility: hidden;
     overflow: hidden;
@@ -62,12 +61,12 @@
             display: block;
             text-decoration: none;
             padding: 1rem 2rem;
-            color: #317eeb;
+            color: $color-primary-light;
         }
     }
 
     .header-text-highlight {
-        color: lighten($color-secondary, 40%);
+        color: $color-secondary-light;
     }
 }
 
