--- a/sass/abstracts/variables.scss
+++ b/sass/abstracts/variables.scss
@@ -1,6 +1,8 @@
 // COLORS
 $color-primary-dark: #0A192E;
-$color-primary-light: #317eeb;
+$color-primary-light: lighten($color-primary-dark, 40%);
 $color-secondary-dark: #5A1807;
-$color-secondary-light: lighten(#5A1807, 40%);
+$color-secondary-light: lighten($color-secondary-dark, 40%);
+
+
 $color-text-primary: #eee;
