--- a/sass/base/typography.scss
+++ b/sass/base/typography.scss
@@ -1,3 +1,28 @@
+p{
+    font-size: 1.6rem;
+    line-height: 2.4rem;
+}
+
+.heading-primary-jumbo {
+    font-size: 6rem;
+}
+
+.heading-primary {
+    font-size: 3.2rem;
+    color: $color-primary-light;
+}
+
+.heading-secondary {
+    font-size: 2.4rem;
+    color: $color-secondary-light;
+}
+
+
+.heading-tertiary {
+    font-size: 1.9rem;
+    color: $color-secondary-light;
+}
+
 @media screen and (max-width: 65rem) {
     html {
         font-size: 57.5%;
@@ -14,9 +39,4 @@
     html {
         font-size: 47.5%;
     }
-}
-
-p{
-    font-size: 1.6rem;
-    line-height: 2.4rem;
 }
