--- a/sass/layout/grid.scss
+++ b/sass/layout/grid.scss
@@ -7,5 +7,12 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    gap: 3rem;
+}
+
+.col-1-of-2 {
+    max-width: calc(100% / 2);
+}
+
+.col-1-of-4 {
+    max-width: calc(100% / 4);
 }
