--- a/sass/layout/grid.scss
+++ b/sass/layout/grid.scss
@@ -7,12 +7,15 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    flex-wrap: wrap;
+    align-content: space-between;
+    row-gap: 10rem;
 }
 
 .col-1-of-2 {
-    max-width: calc(100% / 2);
+    width: calc(100% / 2);
 }
 
-.col-1-of-4 {
-    max-width: calc(100% / 4);
+.col-1-of-6 {
+    width: calc(100% / 6);
 }
