add terraform icon

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,7 @@
 @import "./components/NavBar.scss";
 @import "./components/PostPreview.scss";
 @import "./components/featuredPosts.scss";
+@import "./components/toolbelt.scss";
 
 // LAYOUT
 @import "./layout/grid.scss";
