--- a/sass/pages/home.scss
+++ b/sass/pages/home.scss
@@ -4,7 +4,18 @@
         margin-bottom: 10rem;
     }
 
+    &__section-summary {
+        p {
+            padding: 5rem;
+        }
+    }
+
     &__profile-photo {
         width: 100%;
+        height: 35rem;
+        background-image:linear-gradient(to right, $color-primary-dark, $color-primary-light), url("https://myportfolioblogbucket.s3.us-west-1.amazonaws.com/me-profile.png");
+        background-blend-mode: screen;
+        background-size: cover;
+        border-radius: 1rem;
     }
 }
