--- a/sass/pages/home.scss
+++ b/sass/pages/home.scss
@@ -10,12 +10,21 @@
         }
     }
 
-    &__profile-photo {
+    &__profile-photo-container {
+        clip-path: circle(40%);
+        position: relative;
+        height: 50rem;
         width: 100%;
-        height: 35rem;
-        background-image:linear-gradient(to right, $color-primary-dark, $color-primary-light), url("https://myportfolioblogbucket.s3.us-west-1.amazonaws.com/me-profile.png");
-        background-blend-mode: screen;
+    }
+
+    &__profile-photo {
+        background-image:linear-gradient(to right, rgba($color-secondary-dark, 0.15), rgba($color-secondary-light, 0.15)), url("https://myportfolioblogbucket.s3.us-west-1.amazonaws.com/me-profile.png");
         background-size: cover;
-        border-radius: 1rem;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        height: 50rem;
+        width: 100%;
     }
 }
