--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,6 +14,7 @@
 @import "./components/PostPreview.scss";
 @import "./components/featuredPosts.scss";
 @import "./components/toolbelt.scss";
+@import "./components/button.scss";
 
 // LAYOUT
 @import "./layout/grid.scss";
