--- a/sass/components/button.scss
+++ b/sass/components/button.scss
@@ -17,5 +17,10 @@
         font-size: 1.5rem;
         display: block;
         padding: 2rem 3rem;
+
+        a {
+            text-decoration: none;
+            color: white;
+        }
     }
 }
