style about-card

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,7 @@
 @import "./components/featuredPosts.scss";
 @import "./components/toolbelt.scss";
 @import "./components/button.scss";
+@import "./components/about-card.scss";
 
 // LAYOUT
 @import "./layout/grid.scss";
