--- a/sass/pages/home.scss
+++ b/sass/pages/home.scss
@@ -11,8 +11,9 @@
     &__profile-photo-container {
         clip-path: circle(40%);
         position: relative;
-        height: 50rem;
-        width: 100%;
+        height: 100%;
+        width: 50%;
+        margin: 0 auto;
     }
 
     &__profile-photo {
@@ -22,7 +23,7 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        height: 50rem;
+        height: 100%;
         width: 100%;
     }
 }
